# QQ-AI-Quant-Lab

./: .gitignore  PROJECT_STRUCTURE.md  README.md  README_BACKTEST_REPORT.md  README_zh.md  REPORT.md  audit_progress.py  audit_targets.py  patch_alpha_score.py  patch_factor_engine.py  patch_factor_extractor.py  patch_static_score.py  patch_trading_signal.py  patch_tui_app.py  patch_vectorize.py  patch_zombie.py  pyproject.toml  repair_session_report.md  requirements.txt  summarize_kronos_ic.py  verify_localization.py
.Jules/: palette.md
.agents/: persona.md
.agents/workflows/: sync-persona.md
TradingAgents/: main.py  run_ollama_demo.py
crawlers/: .gitignore  finance_news_collector.py  main.py  requirements.txt
crawlers/finance_news_collector/: __init__.py  collector.py  config.py  llm_analyzer.py  main.py  models.py  searcher.py  utils.py
logs/: decisions_2026-02-23.jsonl  decisions_2026-02-24.jsonl  decisions_2026-02-27.jsonl  decisions_2026-03-01.jsonl  decisions_2026-03-16.jsonl  decisions_2026-03-17.jsonl  decisions_2026-03-28.jsonl  decisions_2026-03-29.jsonl
models/us_stock/: us_lgbm.pkl
news_data/: 股市_20260222_211115.json  股市_20260222_212146.json  股市_news.json
reports/: Phase4_Implementation_Plan.md  Phase4_Task_Progress.md  audit_report_20231024.md  audit_report_2024-03-24.md  research_kronos_ic_v2.md
research_db/: README.md
research_db/index/: experiments.csv  factors.csv
research_db/meta/: leaderboard.json
src/: config.py  main.py  main_hub.py  run_simple_backtest.py  run_theater.py  trading_signal.py  tui_app.py  webui.py
(+240 files in other folders)
