[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-quant-lab"
version = "0.2.0-beta"
description = "AI 量化与财经智库 - 集成新闻搜集、行情预测与多智能体决策"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich",
    "flask",
    "flask-cors",
    "pandas",
    "numpy",
    "plotly",
    "requests",
    "beautifulsoup4",
    "python-dotenv",
    "yfinance"
]

[project.scripts]
lab-main = "main_hub:main_hub"
news-lab = "crawlers.main:main"
api-lab = "crawlers.api:run_server"
trade-lab = "tradingagents.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
