[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-quant-lab"
version = "0.2.0-beta"
description = "AI 量化与财经智库 - 集成新闻搜集、行情预测与多智能体决策"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich",
    "flask",
    "flask-cors",
    "pandas",
    "numpy",
    "plotly",
    "requests",
    "beautifulsoup4",
    "python-dotenv",
    "yfinance",
    "questionary>=2.1.0",
    "duckduckgo-search",
    "torch",
    "huggingface_hub",
    "tqdm",
    "stockstats"
]

[project.scripts]
lab-main = "main_hub:main_hub"
# Legacy scripts removed for single-CLI experience.
# Use 'lab-main' and select modules from the menu.

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
